--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block scripts %}
  {{ super() }}
   {{ moment.include_moment() }}
    {% endblock %}
+
 {% block title %}Flasky{% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -27,12 +29,16 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-    <div class="page-header">
-        <h1>Hello, Ali!</h1>
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
     </div>
-   <p> The local date and time is {{ moment(current_time).format('LLLL') }}. </p>
+    {% endfor %}
 
-        <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
-
+    <div class="page-header">
+        <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    </div>
 </div>
+{{ wtf.quick_form(form) }}
 {% endblock %}
