--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
 
     <div class="page-header">
         <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+        <h1>Hello, {% if emailMessage %}{{ emailMessage }}{% else %}{% endif %}</h1>
     </div>
 </div>
 {{ wtf.quick_form(form) }}
